fixed exampleVCF path to code

--- a/exampleVCF.ipynb
+++ b/exampleVCF.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Source code available [here](https://github.com/apetri/easyVCF)"
+    "### Source code available [here](https://github.com/apetri/easyGene)"
    ]
   },
   {
@@ -498,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
