show only 2 peak rows

--- a/exampleMartCross.ipynb
+++ b/exampleMartCross.ipynb
@@ -88,11 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/site-packages/matplotlib/__init__.py:872: UserWarning: axes.color_cycle is deprecated and replaced with axes.prop_cycle; please use the latter.\n",
+      "  warnings.warn(self.msg_depr % (key, alt_key))\n"
+     ]
+    }
+   ],
    "source": [
     "import martCross\n",
     "data = martCross.PeakMartCross.from_files(\"data/200_bp_summits_allchr.txt\",\"data/mart_export.xls\")"
@@ -194,12 +203,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### First 5 peak file rows"
+    "### First 2 peak file rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -239,53 +248,23 @@
        "      <td>400</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>X</td>\n",
-       "      <td>15735678</td>\n",
-       "      <td>15736078</td>\n",
-       "      <td>15735878</td>\n",
-       "      <td>400</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>V</td>\n",
-       "      <td>104472</td>\n",
-       "      <td>104872</td>\n",
-       "      <td>104672</td>\n",
-       "      <td>400</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>X</td>\n",
-       "      <td>5081194</td>\n",
-       "      <td>5081594</td>\n",
-       "      <td>5081394</td>\n",
-       "      <td>400</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  chromosome    pstart      pend      pmid  pampl  pid\n",
-       "0          X   5084087   5084487   5084287    400    0\n",
-       "1         IV   5015289   5015689   5015489    400    0\n",
-       "2          X  15735678  15736078  15735878    400    1\n",
-       "3          V    104472    104872    104672    400    0\n",
-       "4          X   5081194   5081594   5081394    400    2"
+       "  chromosome   pstart     pend     pmid  pampl  pid\n",
+       "0          X  5084087  5084487  5084287    400    0\n",
+       "1         IV  5015289  5015689  5015489    400    0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.peaks.head(5)"
+    "data.peaks.head(2)"
    ]
   },
   {
