completed example docs

--- a/exampleMartCross.ipynb
+++ b/exampleMartCross.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -190,7 +190,7 @@
        "4  caenorhabditis_elegans_prjna13758         IV  5428772  5428792    3"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -258,13 +258,153 @@
        "1         IV  5015289  5015689  5015489    400    0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.peaks.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Set amplitude of peaks to 200 bp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data.setPampl(200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross the peak and mart data sets looking for pairs less than 2000 bp apart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cross = data.pkfind(bp_tolerance=2000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First 2 lines of the crossed dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>project</th>\n",
+       "      <th>chromosome</th>\n",
+       "      <th>pstart</th>\n",
+       "      <th>pend</th>\n",
+       "      <th>pampl</th>\n",
+       "      <th>gstart</th>\n",
+       "      <th>gend</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>gid</th>\n",
+       "      <th>pid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>caenorhabditis_elegans_prjna13758</td>\n",
+       "      <td>I</td>\n",
+       "      <td>1807960</td>\n",
+       "      <td>1808160</td>\n",
+       "      <td>200</td>\n",
+       "      <td>1808091</td>\n",
+       "      <td>1811835</td>\n",
+       "      <td>69</td>\n",
+       "      <td>21</td>\n",
+       "      <td>132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>caenorhabditis_elegans_prjna13758</td>\n",
+       "      <td>I</td>\n",
+       "      <td>6435828</td>\n",
+       "      <td>6436028</td>\n",
+       "      <td>200</td>\n",
+       "      <td>6436058</td>\n",
+       "      <td>6441192</td>\n",
+       "      <td>30</td>\n",
+       "      <td>23</td>\n",
+       "      <td>234</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             project chromosome   pstart     pend  pampl  \\\n",
+       "0  caenorhabditis_elegans_prjna13758          I  1807960  1808160    200   \n",
+       "1  caenorhabditis_elegans_prjna13758          I  6435828  6436028    200   \n",
+       "\n",
+       "    gstart     gend  distance  gid  pid  \n",
+       "0  1808091  1811835        69   21  132  \n",
+       "1  6436058  6441192        30   23  234  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save in excel format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cross.to_excel(\"data/test_output.xls\")"
    ]
   },
   {
