save matched/non matched peaks

--- a/exampleMartCross.ipynb
+++ b/exampleMartCross.ipynb
@@ -2,37 +2,51 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Short story"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Downlowad the code [here](https://github.com/apetri/easyGene), and install the dependencies. You will need to run the script named _martcross.py_. You do it like this"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "    python martCross.py mart.ini"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Where the _mart.ini_ configuration file looks like this"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -45,43 +59,58 @@
       "mart_file = data/mart_export.xls\r\n",
       "pampl = 400\r\n",
       "bp_tolerance = 2000\r\n",
-      "output_file = data/output_test.xls"
+      "output_file = data/output_test.xls\r\n",
+      "save_match_list = True"
      ]
     }
    ],
    "source": [
-    "cat mart.ini"
+    "cat mart_example.ini"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This produces the following output:"
    ]
   },
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "[+] Reading options from: mart.ini\n",
+    "[+] Reading options from: mart_example.ini\n",
     "[+] Reading bp peaks from: data/200_bp_summits_allchr.txt\n",
     "[+] Reading mart regions from: data/mart_export.xls\n",
     "[+] Setting bp interval to: 400\n",
     "[+] Finding cross regions in data, with tolerance: 2000 bp\n",
-    "[+] Writing result to: data/output_test.xls"
+    "[+] Writing result to: data/output_test.xls\n",
+    "[+] Writing matched peaks to: data/output_test_match.xls\n",
+    "[+] Writing non matched peaks to: data/output_test_no_match.xls"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Long story"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "You basically have a mart region file in excel format, and a peak location file in text format. You can read them in a pandas DataFrame using the _PeakMartCross_ class"
    ]
@@ -90,7 +119,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -109,7 +140,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### First 5 mart file rows"
    ]
@@ -118,7 +152,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -201,7 +237,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### First 2 peak file rows"
    ]
@@ -210,7 +249,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -270,7 +311,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "source": [
     "### Set amplitude of peaks to 200 bp"
@@ -280,7 +323,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -289,7 +334,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Cross the peak and mart data sets looking for pairs less than 2000 bp apart"
    ]
@@ -298,7 +346,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -307,7 +357,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### First 2 lines of the crossed dataset"
    ]
@@ -316,7 +369,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -391,7 +446,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Save in excel format"
    ]
@@ -400,7 +458,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -411,7 +471,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
